manifests/base/microservices/orders/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: sock-shop
  labels:
    name: orders
    monitor: "true"
spec:
  selector:
    name: orders
  ports:
    - name: http
      port: 80
      targetPort: 80
