manifests/base/microservices/orders/orders-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      app: orders
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
    ports:
    - protocol: TCP
      port: 8080
